# PMSuite

./: .gitignore  API.md  DESIGN.md  EXCELBUILDER.md  EXECUTIVE_CHANGES_SUMMARY.md  HANDOFF.md  INTERACTIVE_SURFACE.md  JSONFILE.md  MASTERECAP.md  README.md  STREAMLIT.md  pyproject.toml
components/gantt_chart/frontend/src/: GanttComponent.jsx  gantt-theme.css
examples/: npde_demo.json  small_demo.json
gantt_builder/: api.py  critical_path.py  errors.py  excel_builder.py  locations.py  models.py  project_io.py  scheduler.py  validation.py
tests/: playwright_helpers.py  test_api.py  test_baseline.py  test_completion.py  test_critical_path.py  test_delays.py  test_dependencies.py  test_excel_builder.py  test_models.py  test_project_io.py  test_streamlit_playwright.py
ui/: streamlit_app.py
