[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmsuite-gantt"
version = "0.1.0"
description = "JSON-driven Excel Gantt chart builder for semiconductor NPDE workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [
    { name = "Frosty-STI" },
]
dependencies = [
    "pydantic>=2.5",
    "xlsxwriter>=3.1",
    "holidays>=0.45",
    "streamlit>=1.30",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "openpyxl>=3.1",
]
# pytest-benchmark added back when test_performance.py is implemented

[tool.hatch.build.targets.wheel]
packages = ["gantt_builder", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "visual: opt-in visual snapshot tests for Excel output",
]
addopts = "-ra"
